--- a/calculator/package.json
+++ b/calculator/package.json
@@ -8,6 +8,7 @@
   "author": "Luana Cesar",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "calculator.js": "^1.0.1",
     "express": "^4.17.1"
   },
