--- a/Newsletter-Signup/package.json
+++ b/Newsletter-Signup/package.json
@@ -1,7 +1,6 @@
 {
   "name": "newsletter-signup",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,5 +10,6 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1"
-  }
+  },
+  "description": ""
 }
